--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,12 +3,19 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         tools:context=".HomeFragment">
-    <FrameLayout
+    <data>
+        <variable name="handler" type="jp.tomorrowkey.android.navigationgraphsample.HomeFragmentEventHandler" />
+    </data>
+
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Home"/>
-    </FrameLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center|center_horizontal">
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Next"
+                android:onClick="@{handler.onClickNextButton}"/>
+    </LinearLayout>
 </layout>
