--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,7 @@
         <action
                 android:id="@+id/action_homeFragment_to_nextFragment"
                 app:destination="@id/nextFragment"/>
+        <action android:id="@+id/action_homeFragment_to_nestedNavGraph" app:destination="@id/nested_nav_graph.xml"/>
     </fragment>
     <fragment
             android:id="@+id/nextFragment"
@@ -23,5 +24,7 @@
         <action android:id="@+id/action_nextFragment_to_homeFragment"
                 app:destination="@id/homeFragment"
                 app:popUpTo="@+id/homeFragment" app:popUpToInclusive="true"/>
+        <action android:id="@+id/action_nextFragment_to_nestedNavGraph" app:destination="@id/nested_nav_graph.xml"/>
     </fragment>
+    <include app:graph="@navigation/nested_nav_graph"/>
 </navigation>
