Update xml code style

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,14 +3,22 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".HomeFragment">
+        tools:context=".HomeFragment"
+        >
+
     <data>
-        <variable name="handler" type="jp.tomorrowkey.android.navigationgraphsample.HomeFragmentEventHandler" />
+
+        <variable
+                name="handler"
+                type="jp.tomorrowkey.android.navigationgraphsample.HomeFragmentEventHandler"
+                />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
+
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
@@ -20,19 +28,21 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-        >
+                >
+
             <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Next"
                     android:onClick="@{handler.onClickNextButton}"
-            />
+                    />
+
             <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nested Fragment"
                     android:onClick="@{handler.onClickNestedFragmentButton}"
-            />
+                    />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
