--- a/app/src/main/res/layout/fragment_nested.xml
+++ b/app/src/main/res/layout/fragment_nested.xml
@@ -3,10 +3,14 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".NestedFragment">
+        tools:context=".NestedFragment"
+        >
+
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
+
         <TextView
                 android:text="Nested Fragment"
                 android:layout_width="wrap_content"
@@ -15,6 +19,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-        />
+                />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
