--- a/app/src/main/res/layout/fragment_next.xml
+++ b/app/src/main/res/layout/fragment_next.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".NextFragment">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".NextFragment"
+        >
 
     <data>
-        <variable name="handler" type="jp.tomorrowkey.android.navigationgraphsample.NextFragmentHandler" />
+
+        <variable
+                name="handler"
+                type="jp.tomorrowkey.android.navigationgraphsample.NextFragmentHandler"
+                />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
@@ -18,19 +27,22 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintBottom_toBottomOf="parent"
+                >
+
             <Button
                     android:text="Pop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="@{handler.onClickPopButton}"
-            />
+                    />
+
             <Button
                     android:text="Nested Fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="@{handler.onClickNestedFragmentButton}"
-            />
+                    />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
