--- a/app/src/main/res/navigation/nested_nav_graph.xml
+++ b/app/src/main/res/navigation/nested_nav_graph.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nested_nav_graph.xml"
-            app:startDestination="@id/nestedFragment">
-    <fragment android:id="@+id/nestedFragment"
-              android:name="jp.tomorrowkey.android.navigationgraphsample.NestedFragment"
-              android:label="fragment_nested"
-              tools:layout="@layout/fragment_nested"/>
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/nested_nav_graph.xml"
+            app:startDestination="@id/nestedFragment"
+        >
+    <fragment
+            android:id="@+id/nestedFragment"
+            android:name="jp.tomorrowkey.android.navigationgraphsample.NestedFragment"
+            android:label="fragment_nested"
+            tools:layout="@layout/fragment_nested"
+            />
 </navigation>
