--- a/app/src/main/res/layout/fragment_next.xml
+++ b/app/src/main/res/layout/fragment_next.xml
@@ -12,6 +12,11 @@
                 name="handler"
                 type="jp.tomorrowkey.android.navigationgraphsample.NextFragmentHandler"
                 />
+
+        <variable
+                name="name"
+                type="String"
+                />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,6 +34,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 >
+
+            <TextView
+                    android:id="@+id/name_text_view"
+                    android:text="@{name}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
 
             <Button
                     android:text="Pop"
