--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,6 +27,10 @@
             android:label="fragment_next"
             tools:layout="@layout/fragment_next"
             >
+        <argument
+                android:name="name"
+                app:argType="string"
+                />
         <action
                 android:id="@+id/action_nextFragment_to_homeFragment"
                 app:destination="@id/homeFragment"
